# template-agentic-ai-apps-azure

./: .env.azure.example  .env.example  .gitignore  README.md  azure.yaml  docker-compose.yml
.github/: copilot-instructions.md
.github/documents/: azure-resource-reference.md  library-api-reference.md  streaming-protocol.md
.github/instructions/: authoritative-sources.instructions.md  azure-services.instructions.md  backend.instructions.md  coding-standards.instructions.md  data-flow.instructions.md  docker-and-containers.instructions.md  documentation.instructions.md  frontend.instructions.md  infrastructure.instructions.md  monorepo-structure.instructions.md  py_bestpractice.instructions.md  py_fastapi.instructions.md  py_models.instructions.md  py_testing.instructions.md  security-and-config.instructions.md  service-integration-patterns.instructions.md  streaming-contract.instructions.md  system-architecture.instructions.md  testing-conventions.instructions.md  ts_bestpractice.instructions.md
.github/prompts/: deploy-azure.prompt.md  new-agent.prompt.md  new-endpoint.prompt.md  new-tool.prompt.md  setup-local.prompt.md
.github/skills/add-api-endpoint/: SKILL.md
.github/skills/add-azure-resource/: SKILL.md
.github/skills/add-chat-feature/: SKILL.md
.github/skills/agent-authoring/: SKILL.md
.github/skills/agentkit-library/: SKILL.md
.github/skills/azure-deployment/: SKILL.md
.github/skills/cosmos-db-patterns/: SKILL.md
.github/skills/docker-local-dev/: SKILL.md
.github/skills/e2e-validation/: SKILL.md
.github/skills/evalkit-library/: SKILL.md
.github/skills/evaluation-pipeline/: SKILL.md
.github/skills/extend-template/: SKILL.md
.github/skills/foundrykit-library/: SKILL.md
.github/skills/load-testing/: SKILL.md
.github/skills/mcp-server-development/: SKILL.md
.github/skills/observability-setup/: SKILL.md
.github/skills/smoke-testing/: SKILL.md
.github/skills/storage-backend/: SKILL.md
.github/skills/synthetic-data-pipeline/: SKILL.md
.github/skills/synthetickit-library/: SKILL.md
.github/skills/test-infrastructure/: SKILL.md
.github/skills/testkit-library/: SKILL.md
.github/skills/tool-registration/: SKILL.md
.github/skills/troubleshooting/: SKILL.md
.github/skills/write-backend-tests/: SKILL.md
.github/workflows/: ci.yml  terraform-validate.yml
docs/: API.md  ARCHITECTURE.md  EXTENSION_POINTS.md  SETUP.md  TROUBLESHOOTING.md
infra/: README.md  main.tf  main.tfvars.example  outputs.tf  provider.tf  variables.tf
infra/modules/application-insights/: main.tf
infra/modules/container-app/: main.tf
infra/modules/container-apps-environment/: main.tf
infra/modules/container-registry/: main.tf
infra/modules/cosmos-db/: main.tf
infra/modules/key-vault/: main.tf
infra/modules/log-analytics/: main.tf
infra/scripts/: postprovision.sh
py/: pyproject.toml
py/apps/app-template/: Dockerfile  main.py  pyproject.toml
py/apps/app-template/agents/: chat-agent.yaml
py/apps/app-template/api/v1/: chat.py
py/apps/app-template/core/: config.py  logging.py  telemetry.py
py/apps/app-template/models/: chat.py
py/apps/app-template/prompts/: system.md
py/apps/app-template/services/: storage.py
py/apps/app-template/tests/: conftest.py  test_api.py  test_stream.py
py/apps/app-template/tools/: sample_tools.py
py/apps/sample-eval-e2e/: main.py  pyproject.toml
py/apps/sample-eval-e2e/pipeline/: __init__.py
py/apps/sample-eval-e2e/tests/: test_e2e.py
py/libs/agentkit/: README.md  pyproject.toml
py/libs/agentkit/agentkit/: __init__.py  loader.py
py/libs/agentkit/tests/: test_loader.py
py/libs/evalkit/: pyproject.toml
py/libs/evalkit/evalkit/: __init__.py  coaching.py  evaluator.py  models.py  rubric.py
py/libs/evalkit/tests/: conftest.py  test_coaching.py  test_evaluator.py  test_rubric.py
py/libs/foundrykit/: README.md  pyproject.toml
py/libs/foundrykit/foundrykit/: __init__.py  agent.py  client.py  config.py  tools.py
py/libs/foundrykit/tests/: test_registry.py
py/libs/synthetickit/: pyproject.toml
py/libs/synthetickit/synthetickit/: __init__.py  models.py  pipeline.py  quality.py  scenarios.py
py/libs/synthetickit/synthetickit/stages/: __init__.py
py/libs/synthetickit/tests/: conftest.py  test_pipeline.py  test_quality.py  test_scenarios.py
py/libs/testkit/: pyproject.toml
py/libs/testkit/testkit/: __init__.py  assertions.py  cosmos.py  foundry.py  llm.py  mcp.py  sse.py  storage.py
py/libs/testkit/tests/: conftest.py  test_cosmos.py  test_foundry.py  test_llm.py  test_sse.py  test_storage.py
py/mcp/mcp-server-template/: Dockerfile  README.md  pyproject.toml  server.py
py/mcp/mcp-server-template/tools/: __init__.py
tasks/: lessons.md  todo.md
ts/: package.json  pnpm-lock.yaml
ts/apps/ui-copilot-template/: Dockerfile  README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
(+12 files in other folders)
