[project]
name = "sample-eval-e2e"
version = "0.1.0"
description = "End-to-end sample: synthetic data generation → simulated agent → evaluation pipeline"
requires-python = ">=3.11"
dependencies = [
  "synthetickit",
  "evalkit",
  "testkit",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
synthetickit = { workspace = true }
evalkit = { workspace = true }
testkit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
