[project]
name = "testkit"
version = "0.1.0"
description = "Shared test utilities and fakes for the agentic app template"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
